--- a/sbt-alpine/1.2.1/deps/Dockerfile
+++ b/sbt-alpine/1.2.1/deps/Dockerfile
@@ -7,6 +7,6 @@ ENV SBT_VERSION=1.2.1
 RUN \
  echo "$SBT_VERSION" && \
  curl -fsL https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.tgz | tar xfz - -C /usr/local && \
- ln -s /usr/local/sbt/bin/* /usr/local/bin/ && \
+ ln -s /usr/local/sbt/bin/* /usr/local/bin/ \
 
 ENTRYPOINT sbt
