--- a/jdk-alpine/jdk8/Dockerfile
+++ b/jdk-alpine/jdk8/Dockerfile
@@ -2,6 +2,6 @@ FROM frolvlad/alpine-oraclejdk8:slim
 
 MAINTAINER Kondaurov Alexander <kondaurov.dev@gmail.com>
 
-RUN apk add --no-cache bash curl bc
+RUN apk add --no-cache bash wget bc
 
 ENTRYPOINT /bin/bash
