--- a/sbt-alpine/1.2.1/deps/Dockerfile
+++ b/sbt-alpine/1.2.1/deps/Dockerfile
@@ -5,8 +5,8 @@ MAINTAINER Kondaurov Alexander <kondaurov.dev@gmail.com>
 ENV SBT_VERSION=1.2.1
 
 RUN \
- echo "$SBT_VERSION" && \
- curl -fsL https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.tgz | tar xfz - -C /usr/local && \
- ln -s /usr/local/sbt/bin/* /usr/local/bin/ \
+ wget https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.tgz && \
+ tar -xzf sbt-${SBT_VERSION}.tgz && \
+ ln -s /root/sbt/bin/* /usr/local/bin/
 
-ENTRYPOINT sbt
+ENTRYPOINT ["sbt"]
