--- a/sbt-alpine/1.2.1/deps/Makefile
+++ b/sbt-alpine/1.2.1/deps/Makefile
@@ -1,4 +1,7 @@
 image_name=kondaurov/sbt-aline:jdk8sbt1.2.1_deps
 
 build:
-	docker build -t ${image_name} - < Dockerfile
+	docker build -t ${image_name} -f Dockerfile .
+
+ssh:
+	docker run -it --rm ${image_name} /bin/sh
