--- a/sbt-alpine/1.2.1/deps/Dockerfile
+++ b/sbt-alpine/1.2.1/deps/Dockerfile
@@ -7,6 +7,7 @@ ENV SBT_VERSION=1.2.1
 RUN \
  wget https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.tgz && \
  tar -xzf sbt-${SBT_VERSION}.tgz && \
- ln -s /root/sbt/bin/* /usr/local/bin/
+ ln -s /root/sbt/bin/* /usr/local/bin/ && \
+ sbt sbtVersion
 
 ENTRYPOINT ["sbt"]
