--- a/sbt-alpine/1.2.1/deps/Dockerfile
+++ b/sbt-alpine/1.2.1/deps/Dockerfile
@@ -3,13 +3,14 @@ FROM kondaurov/jdk-alpine:jdk8slim
 MAINTAINER Kondaurov Alexander <kondaurov.dev@gmail.com>
 
 ENV SBT_VERSION=1.2.1
+ENV PATH=${PATH}:/usr/local/sbt/bin
 
 WORKDIR /root
 
 RUN \
+
  wget https://github.com/sbt/sbt/releases/download/v${SBT_VERSION}/sbt-${SBT_VERSION}.tgz && \
- tar -xzf sbt-${SBT_VERSION}.tgz && \
- ln -s /root/sbt/bin/sbt /usr/local/bin/ && \
+ tar -xzf sbt-${SBT_VERSION}.tgz && mv sbt /usr/local && rm sbt-${SBT_VERSION}.tgz  && \
  sbt sbtVersion
 
 ENTRYPOINT ["sbt"]
