--- a/jre-alpine/jre8/Makefile
+++ b/jre-alpine/jre8/Makefile
@@ -1,4 +1,4 @@
 image_name=kondaurov/jre-alpine:8
 
 build:
-	docker build -t ${image_name} - < Dockerfile
+	docker pull openjdk:8-jre-alpine && docker build -t ${image_name} - < Dockerfile
