--- a/scalapb/deps/Makefile
+++ b/scalapb/deps/Makefile
@@ -1,4 +1,4 @@
 image_name=kondaurov/scalapb:deps
 
 build:
-	docker build -t ${image_name} -f Dockerfile .
+	docker pull kondaurov/jre-alpine:8 && docker build -t ${image_name} -f Dockerfile .
