--- a/scalapb/publish/Makefile
+++ b/scalapb/publish/Makefile
@@ -10,10 +10,10 @@ run:
 	 -e login=admin \
 	 -e password=admin123 \
 	 -e realm="Sonatype Nexus Repository Manager" \
-	 -e repository=http://localhost:8081/repository/maven-releases/ \
+	 -e repository=http://localhost:8081/repository/maven-snapshots/ \
 	 -e project_name=protos \
 	 -e org=data_clean \
-	 -e version=0.0.123 \
+	 -e version=0.0.125-SNAPSHOT \
 	 -e host=localhost \
-	 -e src_path=/project/example_proto \
+	 -e src_path=/project/example_src \
 	 ${image_name}
