set non root user

--- a/scalapb/publish/Dockerfile
+++ b/scalapb/publish/Dockerfile
@@ -1,6 +1,16 @@
-FROM kondaurov/scalapb:project_deps
+FROM kondaurov/sbt-alpine:jdk8sbt1.2.1_compiled as deps
 
 MAINTAINER Kondaurov Alexander <kondaurov.dev@gmail.com>
+
+ADD sh/deps_template build.sbt
+
+RUN sbt update
+
+FROM kondaurov/sbt-alpine:jdk8sbt1.2.1_compiled
+
+MAINTAINER Kondaurov Alexander <kondaurov.dev@gmail.com>
+
+COPY --from=deps /root /root
 
 ADD sh /scripts
 
