set non root user

--- a/pbjs/generate/Dockerfile
+++ b/pbjs/generate/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:10.10.0-alpine
+FROM node:10.10.0-alpine as base
 
 WORKDIR /pbjs
 
@@ -8,6 +8,18 @@ RUN \
     npm install && \
 	./node_modules/.bin/pbjs || true
 
+FROM node:10.10.0-alpine
+
+MAINTAINER Kondaurov Alexander <kondaurov.dev@gmail.com>
+
+RUN adduser -S pbjs
+
+COPY --from=base /pbjs /home/pbjs
+
 ADD sh /scripts/
+
+WORKDIR /home/pbjs
+
+USER pbjs
 
 ENTRYPOINT ["/bin/sh", "/scripts/generate.sh"]
