--- a/scalapb/generate/Makefile
+++ b/scalapb/generate/Makefile
@@ -2,7 +2,10 @@ base_image=kondaurov/scalapb:deps
 image_name=kondaurov/scalapb:generator
 
 build:
-	docker build -t ${image_name} -f Dockerfile .
+	docker build -t ${image_name} .
+
+build_clean:
+	docker build -t ${image_name} .
 
 ssh:
 	docker run --rm -it \
@@ -17,7 +20,6 @@ generate_scala:
 	docker run --rm \
 	 -v $(PWD):/project \
 	 -e PROTO_DIR=/project/example_proto \
-	 -u 1000:1000 \
 	 -e SCALA_OUT=/project/target \
 	 -e SCALA_OPTS=flat_package \
 	 ${image_name}
