--- a/dev/node/9x/Dockerfile
+++ b/dev/node/9x/Dockerfile
@@ -1,7 +1,24 @@
-FROM kondaurov/dev:base
+FROM ubuntu:16.04
 
 RUN \
+    apt-get update && \
+    apt-get install -y curl && \
     curl -sL https://deb.nodesource.com/setup_9.x -o nodesource_setup.sh && \
     bash nodesource_setup.sh && \
     apt-get install -y nodejs && \
     rm nodesource_setup.sh
+
+ARG userId=1000
+ARG userGroupId=1000
+
+RUN echo "add user" && \
+    addgroup --gid ${userGroupId} dev && \
+    adduser \
+        --uid ${userId} \
+        --gid ${userGroupId} \
+        --disabled-password \
+        --home /home/dev \
+        --gecos "First Last,RoomNumber,WorkPhone,HomePhone" \
+        dev
+
+USER dev
